<resources>
    <string name="app_name">骑着蜗牛</string>
    <string name="positive_text">确定</string>
    <string name="negative_text">取消</string>
    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="loading">努力加载中，请稍候</string>

    <string name="app_error">应用发生未知错误。</string>
    <string name="network_error">请检查您的网络连接。</string>

    <!--transition_name-->
    <string name="transition_avatar">avatar</string>

    <!-- Label for Activity-->
    <string name="label_search">查找</string>
    <string name="label_login">登录</string>
    <string name="label_register">注册</string>
    <string name="label_avatar">个人头像</string>
    <string name="label_user_info">我的资料</string>
    <string name="label_edit_user_nickname">修改昵称</string>
    <string name="label_edit_user_sign">修改签名</string>

    <!--LaunchActivity-->
    <string name="app_slogan">享受美妙时光</string>

    <!--IntroActivity-->
    <string name="app_description_1">我们可能还年轻，但我们一直在努力</string>
    <string name="app_description_2">不负好时光</string>

    <!--HomeActivity-->
    <string name="menu_search">@string/label_search</string>
    <string name="menu_file_download">下载</string>
    <string name="no_login">未登录</string>
    <string name="login_out">退出登录</string>

    <!--LoginActivity-->
    <string name="account_hint">手机号</string>
    <string name="password_hint">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="new_user_register">新用户注册</string>
    <string name="find_password">找回密码</string>
    <string name="login_error_dialog_title">登录失败</string>
    <string name="login_error_dialog_content">账号或密码错误，请重新输入。</string>

    <!--RegisterActivity-->
    <string name="nickname">昵称</string>
    <string name="register">注册</string>
    <string name="input_phone">输入手机号码</string>
    <string name="input_sms_code">请输入短信验证码</string>
    <string name="sms_code_info">我们已经给手机号码%1$s发送了一个6位数验证码</string>
    <string name="sms_code">验证码</string>
    <string name="resend_sms_code_with_countdown">重新发送%1$s</string>
    <string name="sms_error_dialog_title">验证失败</string>
    <string name="sms_error_dialog_content">请重新发送短信验证。</string>
    <string name="set_nickname_and_password">设置昵称和密码</string>
    <string name="set_basic_info_need_to_know">密码由8&#8211;16位数字、字母或符号组成，至少含有2种及以上的字符，且字母开头</string>
    <string name="phone_bound">该手机号码已被以下账号绑定</string>
    <string name="choices_when_phone_bound">你可以选择直接登录该账号或者继续注册新账号</string>
    <string name="direct_login">直接登录</string>
    <string name="continue_register">继续注册</string>
    <string name="or">或</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>

    <!--MeActivity-->
    <string name="my_info">我的资料</string>
    <string name="setting">设置</string>
    <string name="attention_frag_title">收藏</string>
    <string name="about_me_frag_title">关于我</string>

    <!--UserInfoActivity-->
    <string name="avatar">头像</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="university">大学</string>
    <string name="sign">签名</string>
    <string name="no_setting">未设置</string>
    <string name="no_fill">未填写</string>
    <string name="male">男</string>
    <string name="female">女</string>

    <!--EditNicknameActivity-->
    <string name="nickname_hint">请输入昵称</string>
    <string name="save">保存</string>

    <!--EditSignActivity-->
    <string name="sign_hint">一句话介绍</string>
    <string name="no_sign">还没有签名</string>


    <!--AvatarActivity-->
    <string name="take_photo">拍摄</string>
    <string name="pick_photo_from_album">从相册中选择</string>
    <string name="change_avatar">更换头像</string>
    <string name="perm_rational_of_store_camera_photo">保存拍摄的照片需要访问您的存储空间</string>
    <string name="perm_rational_of_read_mobile_photo">读取照片需要访问您的存储空间</string>
    <string name="perm_rational_of_camera">拍摄需要访问您的相机</string>
    <string name="permissions_dialog_title">提示</string>
    <string name="when_camera_perms_denied">您拒绝了系统授权摄像头权限，将不能正常使用拍摄。您可以通过以下操作开启权限以恢复拍摄功能：\n设置/应用/骑着蜗牛/权限/相机</string>
    <string name="when_read_photo_perms_denied">您拒绝了系统授权访问存储空间权限，将不能正常从相册中选取图片。您可以通过以下操作开启权限以从相册中选取图片：\n设置/应用/骑着蜗牛/权限/存储空间</string>
</resources>
