<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
                name="phoneRegisteredActionHandler"
                type="com.ride.snailplayer.framework.ui.register.fragment.PhoneBoundFragment"/>

    </data>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

        <LinearLayout
                android:id="@+id/ll_register_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="8dp"
                android:orientation="horizontal"
                android:background="?selectableItemBackground"
                android:onClick="@{phoneRegisteredActionHandler.onClick}">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_keyboard_arrow_left"
                    android:tint="@color/body_text_2"
                    android:contentDescription="@null"/>

            <TextView
                    android:id="@+id/tv_register_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="18sp"
                    android:textColor="@color/body_text_2"/>

        </LinearLayout>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/phone_bound"
                android:textSize="32sp"
                android:textColor="@color/body_text_1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/choices_when_phone_bound"
                android:textSize="14sp"
                android:textColor="@color/body_text_2"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal"
                android:paddingBottom="@dimen/padding_normal"
                android:background="@drawable/shape_common_rect"
                android:gravity="center">

            <com.ride.snailplayer.widget.imageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/default_profile"
                    android:scaleType="centerCrop"
                    android:contentDescription="@null"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/iv_avatar"
                    android:layout_alignTop="@+id/iv_avatar"
                    android:layout_alignBottom="@+id/iv_avatar"
                    android:layout_marginTop="@dimen/spacing_micro"
                    android:layout_marginLeft="@dimen/spacing_micro"
                    android:layout_marginBottom="@dimen/spacing_micro"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/tv_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/app_name"
                        android:textColor="@color/body_text_1"
                        android:textSize="24sp"/>

                <TextView
                        android:id="@+id/tv_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:gravity="bottom"
                        android:text="@string/app_slogan"
                        android:textColor="@color/body_text_2"
                        android:textSize="14sp"/>

            </LinearLayout>

        </RelativeLayout>

        <Button
                android:id="@+id/direct_login_btn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_common_btn"
                android:text="@string/direct_login"
                android:textColor="@color/app_white"
                android:textSize="@dimen/app_text_size_large"
                android:onClick="@{phoneRegisteredActionHandler.onClick}"/>

        <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:layout_marginBottom="@dimen/padding_normal"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="0.1dp"
                    android:background="@color/app_grey"/>

            <TextView
                    android:id="@+id/tv_app_slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="bottom"
                    android:text="@string/or"
                    android:textColor="@color/body_text_2"
                    android:textSize="14sp"/>

            <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="0.1dp"
                    android:background="@color/app_grey"/>

        </LinearLayout>


        <Button
                android:id="@+id/continue_register_btn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_common_btn_rect"
                android:text="@string/continue_register"
                android:textColor="@color/body_text_1"
                android:textSize="@dimen/app_text_size_large"
                android:onClick="@{phoneRegisteredActionHandler.onClick}"/>

    </LinearLayout>

</layout>
