<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
                name="completeRegisterActionHandler"
                type="com.ride.snailplayer.framework.ui.register.fragment.CompleteRegisterFragment"/>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/ll_register_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="8dp"
                android:orientation="horizontal"
                android:background="?selectableItemBackground"
                android:onClick="@{completeRegisterActionHandler.onClick}">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_keyboard_arrow_left"
                    android:tint="@color/body_text_2"
                    android:contentDescription="@null"/>

            <TextView
                    android:id="@+id/tv_register_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="18sp"
                    android:textColor="@color/body_text_2"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center_vertical">

            <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:scaleType="centerCrop"
                    android:tint="@color/theme_primary"
                    android:src="@drawable/ic_circle_done"
                    android:contentDescription="@null"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/register_success"
                    android:textSize="32sp"
                    android:textColor="@color/body_text_1"/>

        </LinearLayout>

        <Button
                android:id="@+id/btn_fcr_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/selector_common_btn"
                android:text="@string/label_login"
                android:textColor="@color/selector_enabled_text"
                android:textSize="@dimen/app_text_size_large"
                android:onClick="@{completeRegisterActionHandler.onClick}"/>

    </LinearLayout>

</layout>
