<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
                name="checkSMSCodeActionHandler"
                type="com.ride.snailplayer.framework.ui.register.CheckSMSCodeFragment"/>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/ll_register_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingRight="8dp"
                android:orientation="horizontal"
                android:background="?selectableItemBackground"
                android:onClick="@{checkSMSCodeActionHandler.onClick}">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_keyboard_arrow_left"
                    android:tint="@color/body_text_2"
                    android:contentDescription="@null"/>

            <TextView
                    android:id="@+id/tv_register_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="18sp"
                    android:textColor="@color/body_text_2"/>

        </LinearLayout>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/input_sms_code"
                android:textSize="32sp"
                android:textColor="@color/body_text_1"/>

        <TextView
                android:id="@+id/tv_sms_code_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textSize="14sp"
                android:textColor="@color/body_text_2"/>

        <EditText
                android:id="@+id/et_sms_code"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@null"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:hint="@null"
                android:maxLength="6"
                android:textColorHint="@color/body_text_2"
                android:textColorHighlight="@color/body_text_1"
                android:textColor="@color/body_text_1"
                android:textCursorDrawable="@drawable/shape_text_cursor_dark"
                android:textSize="24sp"/>

        <View
                android:id="@+id/sms_code_underline"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/app_grey"/>

        <TextView
                android:id="@+id/tv_resend_sms_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingBottom="@dimen/spacing_normal"
                android:textSize="@dimen/app_text_size_medium"
                android:clickable="true"
                android:onClick="@{checkSMSCodeActionHandler.onClick}"/>

        <Button
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/selector_common_btn"
                android:text="@string/next"
                android:textColor="@color/selector_enabled_text"
                android:textSize="@dimen/app_text_size_large"
                android:onClick="@{checkSMSCodeActionHandler.onClick}"/>

    </LinearLayout>

</layout>
